improve items keyword